# switchlynode

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE  Makefile  README.md  WORK_LOG.md  bugbounty.md  fix_bitcoin.sed  generate_btc_address.go  go.mod  go.sum  test_pubkey.go
.trunk/: trunk.yaml
chain/stellar/: Cargo.toml  Makefile  README.md
chain/stellar/.stellar/contract-ids/: switchly_router.json  switchly_router_new.json
chain/stellar/contracts/: Cargo.toml
chain/stellar/contracts/src/: lib.rs  test.rs
chain/stellar/contracts/test_snapshots/test/: test_add_liquidity_event_structure.1.json  test_add_liquidity_expired.1.json  test_add_liquidity_function.1.json  test_add_liquidity_with_expiry_function.1.json  test_asset_metadata_extraction.1.json  test_churn_simulation.1.json  test_deposit.1.json  test_deposit_invalid_amount.1.json  test_deposit_negative_amount.1.json  test_deposit_not_initialized.1.json  test_enhanced_deposit_event_metadata.1.json  test_get_vault_address_not_initialized.1.json  test_initialize.1.json  test_initialize_already_initialized.1.json  test_multi_asset_support.1.json  test_multiple_deposits.1.json  test_no_initialization_required.1.json  test_return_vault_assets_length_mismatch.1.json  test_simple_event_structure.1.json  test_swap_expired.1.json  test_swap_function.1.json  test_swap_with_expiry_function.1.json  test_transfer_allowance.1.json  test_transfer_out.1.json  test_transfer_out_invalid_amount.1.json  test_transfer_out_not_initialized.1.json  test_update_vault_address.1.json  test_update_vault_address_not_initialized.1.json  test_vault_rotation_scenario.1.json  test_vault_transfer.1.json  (+5 more)
chain/stellar/test_snapshots/test/: test_basic_deposit.1.json  test_deposit_with_expiry.1.json  test_deposit_with_expiry_expired.1.json  test_event_emission.1.json  test_large_amount_deposit.1.json  test_multiple_deposits_different_vaults.1.json  test_return_vault_assets.1.json  test_version.1.json
(+2986 files in other folders)
