# Workspace root for the Switchly Stellar (Soroban) contracts.
# The router contract lives in ./contracts. Build/deploy from this directory so the
# `stellar` CLI uses the shared ./.stellar config (identities, network, contract-ids).
[workspace]
resolver = "2"
members = ["contracts"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
