[package]
name = "switchly-router"
version = "1.0.0"
edition = "2021"
authors = ["THORChain <dev@thorchain.org>"]
description = "Stellar Router Contract for THORChain Integration"
repository = "https://github.com/thorchain/thornode"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true 