[package]
name = "switchly-router"
version = "3.0.0"
edition = "2021"
authors = ["SWITCHLYChain <dev@switchly.org>"]
description = "Stellar (Soroban) Router Contract for Switchly Integration"
repository = "https://github.com/switchly/switchlynode"
license = "MIT"

# Build profiles are defined once at the workspace root (../Cargo.toml).

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
